SDKs/apideck.com/issue-tracking/9.1.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/apideck.com/issue-tracking/9.1.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.CollectionsAllRequest{
        Security: operations.CollectionsAllSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        QueryParams: operations.CollectionsAllQueryParams{
            Cursor: "unde",
            Limit: 592845,
            Raw: false,
            Sort: &shared.CollectionsSort{
                By: "name",
                Direction: "desc",
            },
        },
        Headers: operations.CollectionsAllHeaders{
            XApideckAppID: "nulla",
            XApideckConsumerID: "id",
            XApideckServiceID: "vero",
        },
    }

    ctx := context.Background()
    res, err := s.Collections.CollectionsAll(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GetCollectionsResponse != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### Collections

* `CollectionsAll` - List Collections
* `CollectionsOne` - Get Collection

### Comments

* `CollectionTicketCommentsAdd` - Create Comment
* `CollectionTicketCommentsAll` - List Comments
* `CollectionTicketCommentsDelete` - Delete Comment
* `CollectionTicketCommentsOne` - Get Comment
* `CollectionTicketCommentsUpdate` - Update Comment

### Tags

* `CollectionTagsAll` - List Tags

### Tickets

* `CollectionTicketsAdd` - Create Ticket
* `CollectionTicketsAll` - List Tickets
* `CollectionTicketsDelete` - Delete Ticket
* `CollectionTicketsOne` - Get Ticket
* `CollectionTicketsUpdate` - Update Ticket

### Users

* `CollectionUsersAll` - List Users
* `CollectionUsersOne` - Get user
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
